--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "Peter Skopal",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jest": "^22.4.2"
+  }
 }
