--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Peter Skopal",
   "license": "ISC",
   "dependencies": {
+    "codecov": "^3.0.0",
     "jest": "^22.4.2"
   },
   "jest": {
